docs/samples/valid/print_example.edl
let x: int = 7;
let y: int = 5;
print(x);
print(y);
print(x + y);
print((x * 2) + (y * 3));
