docs/samples/invalid/unmatched_parentheses_example.edl
// Expected error: missing closing ')' in print statement.
let x: int = 4;
print((x + 1);
